# yt-framework

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ytignore  CONTRIBUTING.md  DOCS INSPECTION.md  README.md  pyproject.toml  pyrightconfig.json  tach.toml  yt-cluster-test.example.env
.cursor/rules/: conda-environment.mdc  documentation.mdc  standards.mdc  tach-architecture.mdc  test-authoring.mdc  testing.mdc
.github/workflows/: ci.yml  publish.yml
docs/: __init__.py  conf.py  configuration.md  dev-vs-prod.md  index.md  pipelines-and-stages.md  troubleshooting.md
docs/advanced/: checkpoints.md  code-upload.md  docker.md  index.md  multiple-operations.md  tokenizer-artifact.md
docs/architecture/: layers.md
docs/configuration/: advanced.md  cluster-requirements.md  index.md  secrets.md
docs/operations/: command-mode-map-reduce.md  index.md  map-reduce-typed-jobs.md  map.md  s3.md  sort.md  table.md  vanilla.md  yql.md
docs/reference/: api.md  environment-variables.md  ytjobs.md
docs/testing/: example-pipelines.md  yt-cluster-integration.md
docs/troubleshooting/: configuration.md  debugging.md  index.md  operations.md  pipeline.md
examples/: manifest.yaml
examples/01_hello_world/: README.md  pipeline.py
examples/01_hello_world/configs/: config.yaml
examples/02_multi_stage_pipeline/: README.md
examples/02_multi_stage_pipeline/configs/: config.yaml
examples/03_yql_operations/: README.md
examples/03_yql_operations/configs/: config.yaml  secrets.example.env
examples/04_map_operation/: README.md
examples/04_map_operation/configs/: config.yaml
examples/05_vanilla_operation/: README.md
examples/05_vanilla_operation/configs/: config.yaml
examples/06_s3_integration/: README.md
examples/06_s3_integration/configs/: config.yaml  secrets.example.env
examples/07_custom_docker/: Dockerfile  README.md
examples/07_custom_docker/configs/: config.yaml  secrets.env.example
examples/08_multiple_configs/: README.md  pipeline.py
examples/08_multiple_configs/configs/: config.yaml  config_custom.yaml  config_large.yaml
examples/09_multiple_operations/: README.md
examples/09_multiple_operations/configs/: config.yaml
examples/10_custom_upload/: README.md
examples/10_custom_upload/configs/: config.yaml
examples/environment_log/: README.md
examples/environment_log/configs/: config.yaml
examples/video_gpu/: README.md
examples/video_gpu/configs/: config.yaml  secrets.example.env
scripts/: __init__.py
scripts/coverage/: __init__.py  check_line_coverage.py  run_pytest_line_gate.py
scripts/precommit/: __init__.py  run.py
scripts/precommit/checks/: __init__.py  max_dir_entries.py  max_file_lines.py  max_snake_binding_words.py
tests/: conftest.py  test_architecture_boundaries.py  test_checkpoint.py  test_client_base.py  test_client_dev.py  test_client_dev_runtime.py  test_client_prod.py  test_client_wait.py  test_common.py  test_conftest_collection.py  test_dependency_strategy.py  test_dev_operation.py  test_dev_simulator.py  test_discovery.py  test_env.py  test_factory.py  test_ignore.py  test_job_command.py  test_logging.py  test_map.py  test_map_reduce.py  test_max_row_weight.py  test_operation_secure_env.py  test_operations_dependencies.py  test_pipeline.py  test_pipeline_config.py  test_precommit_policy.py  test_registry.py  test_s3.py  test_sort.py  test_stage.py  test_stage_bootstrap.py  test_stage_contracts.py  test_stderr_parse.py  test_sys_path.py  test_table.py  test_tar_command_wiring.py  test_tokenizer_artifact.py  test_upload.py  test_vanilla.py  (+11 more)
tests/integration/: __init__.py
tests/integration/example_pipelines/: __init__.py  _manifest.py  test_manifest_sync.py  test_smoke.py
tests/integration/examples_cluster/: __init__.py  _requirements.py  test_prod_smoke.py
tests/integration/yt_cluster/: __init__.py  _cluster_config.py  _job_uploads.py  conftest.py  test_checkpoint.py  test_files.py  test_jobs.py  test_map_operations.py  test_sort_operation.py  test_tables_and_factory.py  test_yql.py
typings/boto3/: __init__.pyi
typings/botocore/: __init__.pyi  client.pyi  exceptions.pyi
typings/duckdb/: __init__.pyi
typings/omegaconf/: __init__.pyi  errors.pyi
typings/yt/: __init__.pyi
typings/yt/wrapper/: __init__.pyi  format.pyi  schema.pyi  spec_builders.pyi
yt_framework/: .ytignore  __init__.py  _layout.py
yt_framework/contracts/: __init__.py  stage.py
yt_framework/core/: __init__.py  debug_context.py  dependencies.py  discovery.py  pipeline.py  pipeline_cli.py  pipeline_config.py  registry.py  stage.py
yt_framework/operations/: __init__.py  checkpoint.py  common.py  dependencies.py  dependency_strategy.py  job_command.py  map.py  map_reduce.py  s3.py  sort.py  stage_contracts.py  table.py  tar_command_wiring.py  tokenizer_artifact.py  upload.py  vanilla.py
yt_framework/operations/_internal/: __init__.py  dependency_strategy.py  tokenizer_artifact.py  upload_helpers.py  upload_wrappers.py
yt_framework/operations/command_ops/: __init__.py  map.py  map_reduce.py  map_reduce_support.py  sort.py  vanilla.py
yt_framework/typed_jobs/: __init__.py  stage_bootstrap.py
yt_framework/utils/: __init__.py  archive.py  env.py  ignore.py  logging.py  sys_path.py
yt_framework/yt/: __init__.py  _client_dev_runtime.py  _client_prod_runtime.py  client_base.py  client_dev.py  client_prod.py  dev_simulator.py  factory.py  max_row_weight.py  operation_secure_env.py  yql_builder.py
yt_framework/yt/_client_split/: __init__.py  _client_dev_mr_reduce_sort_mixin.py  _client_dev_ops_mixin.py  _client_dev_yql_mixin.py  _client_prod_cmd_helpers.py  _client_prod_mr_reduce_sort_mixin.py  _client_prod_ops_mixin.py  _client_prod_yql_mixin.py
yt_framework/yt/clients/: __init__.py  client_base.py  (+8 more)
ytjobs/: .ytignore  __init__.py
ytjobs/chatml/: __init__.py  chatml.py
ytjobs/checkpoint/: __init__.py  utils.py
ytjobs/config/: __init__.py
ytjobs/logging/: __init__.py  logger.py  silencer.py
ytjobs/mapper/: __init__.py  mappers.py  utils.py
ytjobs/s3/: __init__.py  client.py
ytjobs/video/: __init__.py  utils.py
(+67 files in other folders)
