[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_framework"
version = "1.3.7"
description = "YTsaurus pipeline framework with utilities and common modules"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Artem Zavarzin", email = "artemutz555@gmail.com"},
    {name = "Gregory Koganovsky", email = "g.koganovsky@gmail.com"},
]
maintainers = [
    {name = "Gregory Koganovsky", email = "g.koganovsky@gmail.com"},
    {name = "Artem Zavarzin", email = "artemutz555@gmail.com"},
]
keywords = [
    "ytsaurus",
    "yt",
    "pipeline",
    "data-processing",
    "map-reduce",
    "distributed-computing",
    "big-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "botocore==1.35.99",
    "boto3==1.35.99",
    "ytsaurus-client>=0.13.0",
    "python-decouple>=3.8",
    "duckdb>=1.0.0",
    "omegaconf>=2.3.0",
]

[project.urls]
Repository = "https://github.com/GregoryKogan/yt-framework"
Documentation = "https://yt-framework.readthedocs.io/en/latest/"
Issues = "https://github.com/GregoryKogan/yt-framework/issues"

[project.optional-dependencies]
dev = [
    "ruff==0.15.12",
    "pre-commit>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=7.2.0",
    "myst-parser[linkify]>=2.0.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast deterministic tests (default scope)",
    "integration: tests that need dev mode, fakes, or external boundaries",
    "yt_cluster: real YTsaurus cluster integration (requires credentials; see docs/testing/yt-cluster-integration.md)",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with ruff format (trailing commas / wrapping)
    "E501", # Line length: formatter covers code; long YQL/docstrings remain.
    "ANN401", # typing.Any at YT/S3 client boundaries and dynamic job specs.
    "FBT001", # Boolean-typed parameters: kw-only migration is API churn.
    "FBT002",
    # Large follow-up refactors (keep select=ALL; silence until addressed systematically):
    "PLC0415",
    "TRY300",
    "TRY301",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "C901",
    "ARG002",
    "BLE001",
    "D205",
    "D401",
    "D417",
    "D105",
    "D100",
    "ANN001",
    "ANN003",
    "ANN201",
    "ANN202",
    "S108",
    "S603",
    "S105",
    "S608",
    "PLR2004",
    "ARG001",
    "S301",
]

[tool.ruff.lint.per-file-ignores]
# Tests: pydocstyle and strict try/except/annotation rules are intentionally relaxed.
"tests/**" = [
    "INP001", # Pytest layout: tests/ on sys.path; not a package (import integration, conftest).
    "ANN002",
    "ARG005",
    "B017",
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "D107",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "PT011",
    "PT018",
    "RUF043",
    "S101",
    "SLF001",
    "T201",
    "TRY003",
    "TRY400",
    "TRY401",
]
# Runnable demos: not API-grade modules; keep lint focused on the library.
"examples/**" = [
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "D107",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "T201",
    "TRY003",
    "TRY400",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
branch = true
source = ["yt_framework", "ytjobs"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_framework*", "ytjobs*"]
