[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_framework"
version = "1.3.7"
description = "YTsaurus pipeline framework with utilities and common modules"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Artem Zavarzin", email = "artemutz555@gmail.com"},
    {name = "Gregory Koganovsky", email = "g.koganovsky@gmail.com"},
]
maintainers = [
    {name = "Gregory Koganovsky", email = "g.koganovsky@gmail.com"},
    {name = "Artem Zavarzin", email = "artemutz555@gmail.com"},
]
keywords = [
    "ytsaurus",
    "yt",
    "pipeline",
    "data-processing",
    "map-reduce",
    "distributed-computing",
    "big-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "botocore==1.35.99",
    "boto3==1.35.99",
    "ytsaurus-client>=0.13.0",
    "python-decouple>=3.8",
    "duckdb>=1.0.0",
    "omegaconf>=2.3.0",
]

[project.urls]
Repository = "https://github.com/GregoryKogan/yt-framework"
Documentation = "https://yt-framework.readthedocs.io/en/latest/"
Issues = "https://github.com/GregoryKogan/yt-framework/issues"

[project.optional-dependencies]
dev = [
    "ruff==0.15.12",
    "pre-commit>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=7.2.0",
    "myst-parser[linkify]>=2.0.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast deterministic tests (default scope)",
    "integration: tests that need dev mode, fakes, or external boundaries",
    "yt_cluster: real YTsaurus cluster integration (requires credentials; see docs/testing/yt-cluster-integration.md)",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Formatter-compatible: enforce via ruff format instead of lint rule.
    "E501", # Line length: formatter covers code; long YQL/docstrings remain.
]

[tool.ruff.lint.per-file-ignores]
# Dev client matches prod signatures; many parameters are intentionally unused.
# Subprocess jobs run bash -c with pipeline-built commands (Bandit cannot verify).
"yt_framework/yt/client_dev.py" = ["ARG002", "PLR0913"]
# Complexity: remaining high-arity API surfaces are isolated to explicit modules.
"yt_framework/operations/dependency_strategy.py" = ["PLR0913"]
"yt_framework/operations/map_reduce.py" = ["PLR0913"]
"yt_framework/operations/s3.py" = ["PLR0913"]
"yt_framework/operations/upload.py" = ["PLR0913"]
"yt_framework/yt/client_base.py" = ["PLR0913"]
"yt_framework/yt/client_prod.py" = ["PLR0913"]
"yt_framework/yt/yql_builder.py" = ["PLR0913"]
# Tests: pydocstyle and strict try/except/annotation rules are intentionally relaxed.
"tests/**" = [
    "INP001", # Pytest layout: tests/ on sys.path; not a package (import integration, conftest).
    "ANN002",
    "ARG005",
    "B017",
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "D107",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "PT011",
    "PT018",
    "RUF043",
    "S101",
    "SLF001",
    "T201",
    "TRY003",
    "TRY400",
    "TRY401",
    "D401", # Short fixture docstrings need not be imperative.
    "TRY301", # Tests intentionally raise inside try for exc_info checks.
    "ARG001", # Pytest hooks and fakes keep full signatures for API compatibility.
    "ARG002",
    "PLC0415", # Lazy imports for optional YT/botocore test doubles.
    "S105", # Test fixtures: fake secrets / auth dict keys flagged as passwords.
    "S108", # Test paths under /tmp and similar for local integration harnesses.
    "S301", # Intentional pickle round-trips in bootstrap tests.
    "ANN202", # Private helpers in tests omit return types for brevity.
    "ANN001", # Pytest fixtures and parametrized tests omit argument annotations.
    "ANN003", # **kwargs on test doubles / hooks.
    "ANN401", # Test doubles intentionally use broad dynamic argument/value types.
    "FBT001", # Signature-compatible fakes keep positional bool flags.
    "FBT002",
    "PLR2004", # Asserts and samples use literal counts and sizes.
    "S608", # Test YQL/SQL snippets are intentional literals.
    "PLR0912", # Integration tests mirror wide production call shapes.
    "PLR0913",
    "PLR0915",
    "C901",
]
# Runnable demos: not API-grade modules; keep lint focused on the library.
"examples/**" = [
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "D107",
    "D400",
    "D415",
    "EM101",
    "EM102",
    "T201",
    "TRY003",
    "TRY400",
    "S105",
    "S108",
    "S301",
    "ANN202",
    "D100",
    "D205",
    "D401",
    "TRY300",
    "TRY301",
    "BLE001",
    "PLC0415", # Optional deps (torch, tf) imported inside try blocks in demos.
    "ANN001", # Demos omit parameter annotations.
    "ANN201", # Demos omit return types on small helpers.
    "ANN401", # Demo scaffolding uses broad/dynamic value types.
    "FBT001", # Demo helper signatures keep positional bool flags for simplicity.
    "FBT002",
    "S603", # Examples spawn subprocesses with fixed or demo-local commands.
    "C901", # Demos use monolithic logging / setup functions.
    "PLR0913", # Example pipelines mirror wide operation signatures.
    "PLR0915",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
branch = true
source = ["yt_framework", "ytjobs"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_framework*", "ytjobs*"]
